--- a/assets/css/raw.main.css
+++ b/assets/css/raw.main.css
@@ -10,3 +10,11 @@
     font-display:swap
 }
   
+pre {
+    @apply whitespace-pre-wrap break-words;
+  }
+  
+  code {
+    @apply whitespace-pre-wrap;
+  }
+  
